# Drift

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: smoke-checklist.md
docs/superpowers/plans/: 2026-05-27-drift-mvp.md  2026-05-28-drift-ui-polish.md  2026-05-28-library-management-and-control.md  2026-05-29-controls-refinement.md  2026-05-29-help-and-about.md
docs/superpowers/specs/: 2026-05-27-drift-torrent-app-design.md  2026-05-28-drift-ui-polish-design.md  2026-05-28-library-management-and-control-design.md  2026-05-29-controls-refinement-design.md  2026-05-29-help-and-about-design.md
mockups/: _serve.js  controls-redesign.html  filter-selection-redesign.html  help-about.html  library-management.html
src/: icons.js  index.html  list-ops.js  list-ops.test.js  main.js  styles.css  toast.html  toast.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: category.rs  clipboard.rs  commands.rs  engine.rs  events.rs  lib.rs  magnet.rs  main.rs  queue.rs  settings.rs  state.rs  tray.rs
src-tauri/tests/: integration.rs  windows_file_lock.rs
