[package]
name = "drift"
version = "0.2.2"
edition = "2021"

[lib]
name = "drift"
path = "src/lib.rs"

[[bin]]
name = "drift"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

librqbit = "8"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
clipboard-win = "5"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
