[package]
name = "drift"
version = "0.4.1"
edition = "2021"

[lib]
name = "drift"
path = "src/lib.rs"

[[bin]]
name = "drift"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

librqbit = "8"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
clipboard-win = "5"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"

# Vendored, lightly-patched librqbit. The only change vs upstream 8.1.1 is that
# the filesystem storage no longer holds a persistent write handle on content
# files — it keeps a read-only handle for reads (seeding) and takes a transient
# write handle only while writing. On Windows this lets completed files be
# opened/executed by other apps WHILE the torrent keeps seeding (a persistent
# write handle blocks execution). The storage stays the same FilesystemStorage
# type, so librqbit's JSON fast-resume persistence still works unchanged.
[patch.crates-io]
librqbit = { path = "vendor/librqbit" }
